# llvm-project

clang-tools-extra/clang-tidy/misc/: AddGetterCheck.cpp  AddGetterCheck.h  CMakeLists.txt  MiscTidyModule.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst  misc-add-getter.rst
clang-tools-extra/test/clang-tidy/checkers/: misc-add-getter.cpp
mlir/examples/: CMakeLists.txt
mlir/examples/SimpleDepType/: CMakeLists.txt  SimpleDepTypeDialect.td  sdd.mlir  ti-opt.cpp
mlir/examples/standalone-bcprint/: CMakeLists.txt  PrintParse.c
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir-c/: IR.h
mlir/include/mlir/Bytecode/: DialectBytecodeReader.c.inc  Parse.c.inc
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/URI/: CMakeLists.txt  URIDialect.h  URIDialect.td
mlir/include/mlir/IR/: BuiltinDialect.h  OpImplementation.h  OperationSupport.h
mlir/include/mlir/Support/: ThreadLocalCache.h
mlir/lib/Bindings/Python/: IRCore.cpp  IRModule.h
mlir/lib/Bytecode/Reader/: BytecodeReader.cpp
mlir/lib/CAPI/IR/: IR.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Shape/IR/: Shape.cpp
mlir/lib/Dialect/URI/: CMakeLists.txt  URIDialect.cpp
mlir/lib/IR/: BuiltinDialect.cpp  BuiltinDialectBytecode.cpp
mlir/test/Dialect/URI/: attr.mlir
mlir/tools/mlir-opt/: mlir-opt.cpp
mlir/tools/mlir-tblgen/: OpPythonBindingGen.cpp
mlir/unittests/Bytecode/: BytecodeTest.cpp
mlir/unittests/IR/: AttributeTest.cpp
utils/bazel/llvm-project-overlay/mlir/: BUILD.bazel
(+4 files in other folders)
